--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -65,11 +65,7 @@
   file = {/Users/robert/Zotero/storage/QDHSA8KS/Malone et al. - 2010 - Modeling sample variables with an Experimental Fac.pdf}
 }
 
-@misc{ManualTitleGwasCatSearch,
-  title = {@{{Manual}}\{,     Title = \{\vphantom{\}\}}{{gwasCatSearch}}: {{A}} Package to Support Ontological Search of the {{GWAS Catalog}}\vphantom\{\},     Author = \{\vphantom\}{{Robert Gentleman}} and {{Vincent Carey}} and {{Rafael Goncalves}}\vphantom\{\},     Year = \{2024\},     Note = \{\vphantom\}{{R}} Package Version 0.2.2\vphantom\{\},   \vphantom\{\}}
-}
-
-@article{rahmanAssociationUrinaryPolycyclic2022,
+@article{rahman2022,
   title = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression: A Cross-Sectional Study from {{NHANES}} 2015-2016},
   shorttitle = {Association among Urinary Polycyclic Aromatic Hydrocarbons and Depression},
   author = {Rahman, Humairat H. and Niemann, Danielle and {Munson-McGee}, Stuart H.},
@@ -129,6 +125,24 @@
   langid = {english},
   pmid = {35870639},
   keywords = {Black or African American,Genetic Predisposition to Disease,genome-wide association study,Genome-Wide Association Study,Humans,Hypertension,Kidney Diseases,Polymorphism Single Nucleotide,pQTL,protein quantitative trait loci,proteome,Proteome,Quantitative Trait Loci}
+}
+
+@article{Uberon2012,
+  title = {Uberon, an Integrative Multi-Species Anatomy Ontology},
+  author = {Mungall, Christopher J. and Torniai, Carlo and Gkoutos, Georgios V. and Lewis, Suzanna E. and Haendel, Melissa A.},
+  year = {2012},
+  month = jan,
+  journal = {Genome Biology},
+  volume = {13},
+  number = {1},
+  pages = {R5},
+  issn = {1474-760X},
+  doi = {10.1186/gb-2012-13-1-r5},
+  abstract = {We present Uberon, an integrated cross-species ontology consisting of over 6,500 classes representing a variety of anatomical entities, organized according to traditional anatomical classification criteria. The ontology represents structures in a species-neutral way and includes extensive associations to existing species-centric anatomical ontologies, allowing integration of model organism and human data. Uberon provides a necessary bridge between anatomical structures in different taxa for cross-species inference. It uses novel methods for representing taxonomic variation, and has proved to be essential for translational phenotype analyses. Uberon is available at http://uberon.org.},
+  langid = {english},
+  pmcid = {PMC3334586},
+  pmid = {22293552},
+  keywords = {Anatomy Comparative,Classification,Computational Biology,Databases Factual,Humans,Phenotype,Software,Species Specificity}
 }
 
 @misc{zotero-1,
